[package]
name = "rust_hello"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
#rust_hello_api = { version = "0.1.0", path = "../helloworld-api" }
rust_hello_api = { version = "0.1.0", git = "https://github.com/neeme-praks-sympower/helloworld-api.git" }

[build-dependencies]
tonic-build = "0.6"
